# tau

./: .env.example  .gitignore  DEPLOYMENT_QUICKSTART.md  DEVELOPMENT.md  README.md  STATUS.md  autoupdate-review.md  circadian_framework.md  claude.md  deploy-safe.sh  deploy.sh  docker-compose.yml  logic.md  prd.md  schema.sql  start_dev.sh  start_dev_pi.sh
daemon/: API_REFERENCE.md  Dockerfile  MAC_DEPLOYMENT.md  README.md  TauLighting.command  alembic.ini  com.tau.daemon.plist  demo_control.py  docker-compose.production.yml  docker-compose.yml  index.html  labjack_monitor.html  ola_mock_interface.html  pyproject.toml  requirements.txt  setup_mac.sh  setup_pi.sh  test_api_query.py  test_discovery_api.py  test_fixtures_api.py  test_frontend.html  test_mac_compatibility.py  test_models.py  test_phase2_integration.py  test_phase3_hardware.py  test_phase4_lighting.py  test_phase5_api.py  test_phase6_websocket.py  test_summary.md  test_unit_logic.py  uninstall_pi.sh  verify_system.py
daemon/alembic/: env.py
daemon/alembic/versions/: 20250101_0000_initial_schema.py  20260103_1400_add_update_tracking.py  20260104_1805_9b8fe7c0f380_add_secondary_dmx_channel_to_fixtures.py  (+19 more)
daemon/config/: logrotate.conf  tau-daemon.service
daemon/deployment/: 99-labjack.rules  DEPLOYMENT.md  RASPBERRY_PI.md  setup_nginx.sh  tau-daemon.service  tau-frontend.service  tau-nginx.conf  tau-sudoers
daemon/docs/: LABJACK_SETUP.md
daemon/examples/: README.md  example_config.yaml
daemon/scripts/: load_example_config.py  perform_update.sh
daemon/tests/: conftest.py
database/: README.md  (+2 more)
(+193 files in other folders)
